--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -6,7 +6,7 @@ on:
       - 'v*'
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -33,4 +33,3 @@ jobs:
           fail_on_unmatched_files: true
           body_path: CHANGELOG.md
           files: healthcheck.jar
-          draft: true
